# test_to_madsoft

./: .gitignore  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini
backend/migrations/: env.py
backend/src/: __main__.py
backend/src/api/: depenedency.py  response.py  setup.py
backend/src/api/v1/endpoints/: __init__.py  user.py
backend/src/api/v1/handlers/user/: create.py
backend/src/common/: types.py
backend/src/common/dto/: user.py
backend/src/common/interfaces/: gateway.py  repository.py
backend/src/common/serializers/: json.py
backend/src/core/: run_uvicorn.py  settings.py
backend/src/database/: __init__.py  converter.py  gateway.py
backend/src/database/core/: manager.py
backend/src/database/models/: __init__.py  user.py
backend/src/database/models/base/: base.py
backend/src/database/models/base/mixins/: with_time.py  with_uuid.py
backend/src/database/repositories/: base.py  crud.py  user.py
backend/src/database/repositories/types/: user.py
backend/src/services/: __init__.py  gateway.py  user.py
test_project/backend/src/: __main__.py
test_project/backend/src/common/interfaces/: gateway.py
test_project/backend/src/database/: converter.py  exceptions.py  gateway.py
test_project/backend/src/database/core/: manager.py
test_project/backend/src/database/models/: user.py
test_project/backend/src/database/models/base/: __init__.py  base.py
test_project/backend/src/database/repositories/: base.py  crud.py  user.py
test_project/backend/src/services/: user.py
(+1 files in other folders)
